# taliesin

./: .gitignore  API.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  taliesin.conf.sample  taliesin.mariadb.sql  taliesin.sqlite3.sql
.github/workflows/: codeql-analysis.yml  main.yml
cmake-modules/: DownloadProject.CMakeLists.cmake.in  FindLibavcodec.cmake  FindLibavdevice.cmake  FindLibavfilter.cmake  FindLibavformat.cmake  FindLibavresample.cmake  FindLibavutil.cmake  FindLibshout.cmake  FindLibswresample.cmake  FindLibswscale.cmake
doc/: INSTALL.md
docker/: Makefile
docker/src/: Dockerfile  entrypoint.sh
docker/x86_64/: Dockerfile
docker/x86_64_custom/: Dockerfile  config.json  entrypoint.sh  oauth-key.pem  taliesin.conf  taliesin.mariadb.sql
docker/x86_64_sqlite3_noauth/: Dockerfile  config.json.orig  taliesin.conf.orig
docs/: API.md  INSTALL.md  taliesin-init  taliesin.conf.sample  taliesin.mariadb.sql  taliesin.service  taliesin.sqlite3.sql
docs/images/: README.md
docs/minimal/: README.md  carleon.conf  carleon.service  carleon.sqlite3.sql  install.sh  taliesin-init.sqlite3.sql
src/: Makefile  config.c  data_source.c  file_list.c  filesystem.c  glewlwyd_resource.c  iddawc_resource.c  iddawc_resource.h  libav-transcode-filter.c  media.c  misc.c  playlist.c  search.c  static_file_callback.c  static_file_callback.h  stream.c  stream_jukebox.c  stream_webradio.c  taliesin.c  taliesin.h  webservice.c
test/: Makefile  README.md  config.c  data_source_browse_category.c  data_source_browse_path.c  data_source_create_test_environment.c  data_source_crud.c  data_source_delete_test_environment.c  data_source_refresh.c  playlist_crud.c  run_test.sh  search_advanced.c  search_simple.c  stream_jukebox.c  stream_webradio.c  unit-tests.c  unit-tests.h
webapp/: asset-manifest.json  bundle.js  config.json.sample  index.html  precache-manifest.8fe6c414bdb316ca6f803f5c6af149d1.js  service-worker.js
webapp-src/: LICENSE  Makefile  README.md  config.json.sample  index.html  index.prod.html  package.json  robots.txt  webpack.config.js  webpack.dev.config.js
webapp-src/css/: taliesin.css
webapp-src/locales/en/: translations.json
webapp-src/locales/fr/: translations.json
webapp-src/public/: config.json.sample  index.html
webapp-src/public/locales/en/: translations.json
webapp-src/public/locales/fr/: translations.json
webapp-src/src/: App.js  index.css  index.js
webapp-src/src/Footer/: AudioPlayer.js  Footer.js  JukeboxNow.js  MPDController.js  MediaInfo.js  PlayerSelector.js  StreamSelector.js  WebradioNext.js  WebradioNow.js
webapp-src/src/MainScreen/: AdvancedSearch.js  BreadCrumbMenu.js  BreadCrumbMenuCategory.js  BreadCrumbMenuElement.js  BrowseCategory.js  BrowseHeader.js  BrowseHeaderCategory.js  BrowseHeaderPath.js  BrowsePath.js  BrowsePlaylist.js  BrowseRecent.js  CategoryButtons.js  Dashboard.js  DataSourceManager.js  Element.js  ElementButtons.js  ElementCategory.js  ElementCategoryIcon.js  ElementCategoryList.js  ElementPathIcon.js  ElementPathList.js  FullScreen.js  MainScreen.js  ManageConfig.js  ManageDataSource.js  ManagePlayer.js  ManageStream.js  MediaRow.js  StreamDetails.js  StreamManager.js  StreamMediaList.js  VideoPlayer.js
webapp-src/src/Modal/: ModalConfirm.js  ModalEdit.js  ModalEditCategory.js  ModalEditDataSource.js  ModalEditMPD.js  ModalEditPlaylist.js  ModalEditStream.js  ModalImportPlaylist.js  ModalManage.js  ModalMedia.js  ModalMessage.js  ModalRemove.js  ModalResetStream.js
webapp-src/src/TopMenu/: DataSourceList.js  LoginButton.js  TopMenu.js
webapp-src/src/lib/: APIManager.js  ConfigManager.js  OAuth2Connector.js  Routage.js  StateStore.js  i18n.js
webapp/locales/en/: translations.json
webapp/locales/fr/: translations.json
webapp/static/: asset-manifest.json  config.json.sample  manifest.json
webapp/static/css/: 1.37ef2458.chunk.css  main.06091e58.css  main.06091e58.css.map  main.0656af8a.css  main.0656af8a.css.map  main.2df8f704.css  main.2df8f704.css.map  main.4e803315.chunk.css  main.9588cc92.css  main.9588cc92.css.map  main.b92584ed.css  main.b92584ed.css.map
webapp/static/js/: 1.75661767.chunk.js  main.061a4348.js  main.0ad3871b.js  main.0cc9d0f6.js  main.12ed7087.js  main.1b33bee4.js  main.1da5649a.js  main.33f6b63d.js  main.38a7b149.js  main.3c1e088a.js  main.44516c0b.js  main.4938428f.js  main.578e4e2d.js  main.5aa8da57.js  main.5b575a44.js  main.64241aaf.js  main.6548f84d.js  main.66d79de2.js  main.7781349a.js  main.7b4597cf.js  main.8e8cf677.js  main.91a56058.js  main.95a395f0.js  main.9ac12d2b.js  main.9b17e684.js  main.aafae82d.js  main.adaed5d6.js  main.b45e55dc.js  main.b6618c4e.js  main.bdde754e.js  main.bf6428f3.chunk.js  main.ca6d5b19.js  main.cce50579.js  main.d4063884.js  main.dcd2c845.js  main.dea14926.js  main.e269e941.js  main.e8d023ff.js  main.eb569620.js  main.ebcf8913.js  (+3 more)
